Adição de dependencias e configuração para Rate Limit.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,21 @@
 spring.application.name=teste-boticario
+
+#Caffeine + Spring Cache
+spring.cache.jcache.provider=com.github.benmanes.caffeine.jcache.spi.CaffeineCachingProvider
+spring.cache.cache-names=buckets
+spring.cache.caffeine.spec=maximumSize=10000,expireAfterAccess=60s
+
+#Bucket4j
+spring.main.allow-bean-definition-overriding=true
+
+#Regras
+bucket4j.enabled=true
+bucket4j.filters[0].cache-name=buckets
+bucket4j.filters[0].http-response-body={ "message": "Too many requests" }
+bucket4j.filters[0].url=.*
+bucket4j.filters[0].rate-limits[0].skip-condition=getRequestURI().contains('/healthcheck')
+bucket4j.filters[0].rate-limits[0].cache-key=getRequestURI()
+bucket4j.filters[0].rate-limits[0].bandwidths[0].capacity=5
+bucket4j.filters[0].rate-limits[0].bandwidths[0].time=1
+bucket4j.filters[0].rate-limits[0].bandwidths[0].unit=minutes
+bucket4j.filters[0].rate-limits[0].bandwidths[0].refill-speed=interval
